Times note front end code added

--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -24,6 +24,9 @@
 			<div class="btn">
 				<input type="submit" value="Sign In" class="sign_btn">
 			</div>
+			<div>
+				<a [routerLink]="'/register'">Click here for Registration</a>
+			</div>
     	</div>
 		</div>	
 	</form>
