--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--<app-registration> </app-registration>-->
-<app-login> </app-login>
+<!--<app-login> </app-login>-->
 <!--<app-forget-password> </app-forget-password>-->
+
+<router-outlet></router-outlet>
