routing code added

--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -14,11 +14,11 @@
 		<div class="form">
 	    	<div class="input_field">
 				<label>Username or email address</label>
-				<input type="text" placeholder="email" class="input" formControlName="name">
+				<input type="text" name="name" placeholder="email" class="input" formControlName="name">
 			</div>
 			<div class="input_field">
 				<label>Password</label>
-				<input type="password" placeholder="password" class="input" formControlName="password">
+				<input type="password" name="password" placeholder="password" class="input" formControlName="password">
 				<a href="../forget-password/forget-password.component.html" class="forgot">Forgot password?</a>
 			</div>
 			<div class="btn">
