--- a/src/app/Components/login/login.component.css
+++ b/src/app/Components/login/login.component.css
@@ -22,13 +22,13 @@ body{
 	margin-bottom: 10px;
 	font-size: 24px;
 	text-align: center;
-	color: #333;
+	color:black;
 }
 
 .container .form{
 	margin-bottom: 10px;
 	background-color: #fff;
-    border: 1px solid #d8dee2;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 20px;
 }
@@ -70,7 +70,7 @@ body{
 	margin-top: 10px;
 	background-color: #28a745;
 	border: 1px solid rgba(27,31,35,.2);
-	width: 100%;
+	width: 350%;
 	color: #fff;
 	font-weight: 600;
 	cursor: pointer;
