some code changes

--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -33,7 +33,7 @@
 					<img src="../../../assets/Google.png" style="width: 270px; height: 40px;">
 				</button>
 				<p>------------------------------OR-----------------------------</p>
-				<button type="button" (click) = "signInWithGoogle()" style="border: none; background: none; padding: none;">
+				<button type="button" (click) = "signInWithFB()" style="border: none; background: none; padding: none;">
 					<img src="../../../assets/Facebook.png" style="width: 270px; height: 40px;">
 				</button>
 				<p>------------------------------OR-----------------------------</p>
