--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!--<app-registration> </app-registration>-->
+<app-registration> </app-registration>
 <!--<app-login> </app-login>-->
 <!--<app-forget-password> </app-forget-password>-->
 <!--<app-update-password> </app-update-password>-->
 
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
